--- a/.github/workflows/deploy-live.yml
+++ b/.github/workflows/deploy-live.yml
@@ -21,7 +21,8 @@ jobs:
         uses: actions/github-script@0.9.0
         with:
           script: |
-            const name = ${{ env.GITHUB_REF_NAME }}.split('/')[1]
+            let ghubref = ${{ env.GITHUB_REF_NAME }}
+            const name = ghubref.split('/')[1]
             core.setOutput('name', name)
       - run: echo "${{steps.get-name.outputs.name}}"
       - name: Set GitHub Actions as Commit Author
