--- a/.github/workflows/deploy-live.yml
+++ b/.github/workflows/deploy-live.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/github-script@0.9.0
         with:
           script: |
-            let ghubref = ${{ env.GITHUB_REF_NAME }}
+            let ghubref = ${{ env.github.ref.name }}
             const name = ghubref.split('/')[1]
             core.setOutput('name', name)
       - run: echo "${{steps.get-name.outputs.name}}"
